# discography

./: meson.build
include/: Discography.hpp  Track.hpp  cli.hpp  utils.hpp
src/: Discography.cpp  Track.cpp  cli.cpp  main.cpp  meson.build  utils.cpp
subprojects/: catch2.wrap
tests/: meson.build  test.cpp
